lazily updating swagger docs, but now it works, will update new crud as I write them
