# public/swagger/openapi.json
@@ -5,7 +5,7 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/users/user{id}": {
+        "/api/users/user?id={id}": {
             "get": {
                 "summary": "Gets a user based on id",
                 "operationId": "App\\Http\\Controllers\\UserController::getUser",
@@ -31,25 +31,47 @@
                         "description": "OK"
                     }
                 }
-            },
+            }
+        },
+        "/api/users/all": {
+            "get": {
+                "summary": "Gets all users",
+                "operationId": "App\\Http\\Controllers\\UserController::getAllUsers",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/users/user": {
             "put": {
-                "summary": "Create a user",
+                "summary": "Update a user",
                 "operationId": "App\\Http\\Controllers\\UserController::updateUser",
                 "parameters": [
                     {
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "description": "Parameter with mutliple examples",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "examples": {
-                            "int": {
-                                "summary": "An int value.",
-                                "value": "1"
-                            }
-                        }
+                        "required": true
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "Parameter with mutliple examples",
+                        "required": true
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "Parameter with mutliple examples",
+                        "required": true
+                    },
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "description": "Parameter with mutliple examples",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -63,19 +85,22 @@
                 "operationId": "App\\Http\\Controllers\\UserController::createUser",
                 "parameters": [
                     {
-                        "name": "id",
-                        "in": "path",
+                        "name": "name",
+                        "in": "query",
                         "description": "Parameter with mutliple examples",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "examples": {
-                            "int": {
-                                "summary": "An int value.",
-                                "value": "1"
-                            }
-                        }
+                        "required": true
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "Parameter with mutliple examples",
+                        "required": true
+                    },
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "description": "Parameter with mutliple examples",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -85,51 +110,14 @@
                 }
             },
             "delete": {
-                "summary": "Create a user",
+                "summary": "Delete a user",
                 "operationId": "App\\Http\\Controllers\\UserController::deleteUser",
                 "parameters": [
                     {
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "description": "Parameter with mutliple examples",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "examples": {
-                            "int": {
-                                "summary": "An int value.",
-                                "value": "1"
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/users/all": {
-            "get": {
-                "summary": "Gets all users",
-                "operationId": "App\\Http\\Controllers\\UserController::getAllUsers",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Parameter with mutliple examples",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "examples": {
-                            "int": {
-                                "summary": "An int value.",
-                                "value": "1"
-                            }
-                        }
+                        "required": true
                     }
                 ],
                 "responses": {
